# clip-genius

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  clipper.py  config.py  highlights.py  ingest.py  jobs.py  main.py  models.py  pipeline.py  transcribe.py
backend/clip_genius_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
