[project]
name = "clip-genius-backend"
version = "0.1.0"
description = "ClipGenius backend: ingest video, transcribe, find highlights, render vertical clips."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
    "faster-whisper>=1.0.3",
    "yt-dlp>=2024.5.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
